[package]
name = "unc-indexer-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This crate hosts structures for the UNC Indexer Framework types"
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

unc-primitives.workspace = true

[features]
nightly = [
  "nightly_protocol",
  "unc-primitives/nightly",
]
nightly_protocol = [
  "unc-primitives/nightly_protocol",
]
