[package]
name = "unc-telemetry"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix.workspace = true
awc.workspace = true
futures.workspace = true
once_cell.workspace = true
openssl.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

unc-o11y.workspace = true
unc-performance-metrics.workspace = true
unc-performance-metrics-macros.workspace = true
unc-primitives.workspace = true

[features]
nightly = [
  "nightly_protocol",
  "unc-o11y/nightly",
  "unc-primitives/nightly",
]
nightly_protocol = [
  "unc-o11y/nightly_protocol",
  "unc-primitives/nightly_protocol",
]
