[package]
name = "unc-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "This crate provides the base set of primitives used by other framework crates"
repository.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
arbitrary.workspace = true
base64.workspace = true
borsh.workspace = true
bytesize.workspace = true
cfg-if.workspace = true
chrono.workspace = true
derive_more.workspace = true
easy-ext.workspace = true
enum-map.workspace = true
hex.workspace = true
num-rational.workspace = true
once_cell.workspace = true
primitive-types.workspace = true
rand.workspace = true
rand_chacha.workspace = true
reed-solomon-erasure.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
sha3.workspace = true
smart-default.workspace = true
stdx.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true

unc-crypto.workspace = true
unc-fmt.workspace = true
unc-o11y.workspace = true
unc-primitives-core.workspace = true
unc-rpc-error-macro.workspace = true
unc-vm-runner.workspace = true
unc-parameters.workspace = true

[features]
sandbox = []
dump_errors_schema = ["unc-rpc-error-macro/dump_errors_schema"]
protocol_feature_fix_staking_threshold = ["unc-primitives-core/protocol_feature_fix_staking_threshold"]
protocol_feature_fix_contract_loading_cost = ["unc-primitives-core/protocol_feature_fix_contract_loading_cost"]
protocol_feature_reject_blocks_with_outdated_protocol_version = ["unc-primitives-core/protocol_feature_reject_blocks_with_outdated_protocol_version"]
nightly = [
  "nightly_protocol",
  "protocol_feature_fix_contract_loading_cost",
  "protocol_feature_fix_staking_threshold",
  "protocol_feature_reject_blocks_with_outdated_protocol_version",
  "unc-fmt/nightly",
  "unc-o11y/nightly",
  "unc-parameters/nightly",
  "unc-primitives-core/nightly",
  "unc-vm-runner/nightly",
]

nightly_protocol = [
  "unc-fmt/nightly_protocol",
  "unc-o11y/nightly_protocol",
  "unc-parameters/nightly_protocol",
  "unc-primitives-core/nightly_protocol",
  "unc-vm-runner/nightly_protocol",
]
new_epoch_sync = []


calimero_zero_storage = []

[dev-dependencies]
assert_matches.workspace = true
bencher.workspace = true
insta.workspace = true

[[bench]]
name = "serialization"
harness = false
