[package]
name = "unc-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix-rt.workspace = true
actix.workspace = true
anyhow.workspace = true
borsh.workspace = true
bytesize.workspace = true
crossbeam.workspace = true
derive_more.workspace = true
elastic-array.workspace = true
enum-map.workspace = true
fs2.workspace = true
hex.workspace = true
itoa.workspace = true
itertools.workspace = true
lru.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
rand.workspace = true
rayon.workspace = true
rlimit.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

unc-chain-configs = { workspace = true, features = ["metrics"] }
unc-crypto.workspace = true
unc-fmt.workspace = true
unc-o11y.workspace = true
unc-parameters.workspace = true
unc-primitives.workspace = true
unc-vm-runner.workspace = true

[dev-dependencies]
assert_matches.workspace = true
bencher.workspace = true
insta.workspace = true
unc-chain.workspace = true
unc-chunks.workspace = true
rand.workspace = true
thiserror.workspace = true

[[bench]]
name = "trie_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "finalize_bench"
harness = false

[features]
default = []
io_trace = []
no_cache = []
single_thread_rocksdb = [] # Deactivate RocksDB IO background threads
test_features = []
serialize_all_state_changes = []
new_epoch_sync = []

nightly_protocol = [
  "unc-chain-configs/nightly_protocol",
  "unc-fmt/nightly_protocol",
  "unc-o11y/nightly_protocol",
  "unc-parameters/nightly_protocol",
  "unc-primitives/nightly_protocol",
  "unc-vm-runner/nightly_protocol",
]
nightly = [
  "nightly_protocol",
  "unc-chain-configs/nightly",
  "unc-fmt/nightly",
  "unc-o11y/nightly",
  "unc-parameters/nightly",
  "unc-primitives/nightly",
  "unc-vm-runner/nightly",
]
