[package]
name = "genesis-csv-to-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true

framework.workspace = true
unc-chain-configs.workspace = true
unc-crypto.workspace = true
unc-primitives.workspace = true
unc-network.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
serde.workspace = true
