[package]
name = "genesis-populate"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
borsh.workspace = true
clap.workspace = true
indicatif.workspace = true
tempfile.workspace = true

framework.workspace = true
unc-chain-configs.workspace = true
unc-crypto.workspace = true
unc-epoch-manager.workspace = true
unc-primitives.workspace = true
unc-store.workspace = true
unc-chain.workspace = true
unc-test-contracts.workspace = true
unc-vm-runner.workspace = true

[features]
nightly_protocol = [
  "unc-chain-configs/nightly_protocol",
  "unc-chain/nightly_protocol",
  "unc-epoch-manager/nightly_protocol",
  "unc-primitives/nightly_protocol",
  "unc-store/nightly_protocol",
  "unc-vm-runner/nightly_protocol",
  "framework/nightly_protocol",
]
nightly = [
  "nightly_protocol",
  "unc-chain-configs/nightly",
  "unc-chain/nightly",
  "unc-epoch-manager/nightly",
  "unc-primitives/nightly",
  "unc-store/nightly",
  "unc-vm-runner/nightly",
  "framework/nightly",
]
